welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:2: error: not found: value V
  var lg:Int=V
             ^noTriples:3: error: type mismatch;
 found   : Unit
 required: Boolean
  for (i<- 0 to (lg)) {
        ^